Extend JCL and embedded-SQL coverage, scope the GUI analysis, fix stale assets
Engine, JCL: statements are segmented and parsed one at a time so an
unsupported construct costs a diagnostic (jcl-syntax, jcl-directive) rather
than the file; parameter-level salvage; scheduler markers (OPC, Control-M,
CA7, ISPF skeletons) pass through; multi-job files; PROC and INCLUDE members
resolved from the whole walk and --proc-path with per-job JCLLIB; DD and EXEC
overrides applied per concatenation entry; referbacks (DSN, DCB, VOL=REF,
UNIT=AFF, REFDD) and symbolics resolved with misses recorded; in-stream cards
interpreted for IKJEFT01/DSN, DSNUTILB, DSNTEP2/TIAUL, SORT, IDCAMS, IEBGENER,
IEBCOPY, IEFBR14; dataset access letters on STEP -> DATASET edges from DD
roles, DISP and the program's SELECT/ASSIGN and OPEN modes.

Engine, SQL: Che4z retries with EXEC SQL bodies masked when its own SQL
grammar refuses a statement; host-variable forms (:h :i, INDICATOR, OF/IN,
Japanese identifiers) mangled and restored; a statement the Db2 grammar
refuses is DEGRADED (kind, tables, cursor from a keyword scan) and reported
as sql-syntax instead of being lost; 36 statement kinds with cursor names,
INTO targets, CRUD table access, column references, SET pairs, INSERT
columns, DECLARE TABLE columns, WHENEVER, isolation, rowset facts; SQL script
assets (.sql/.ddl/.spufi/.dml) split into statements with SQL PL routines
and triggers as graph nodes.

Persistence and graph: schema v5 with JCL_STEP, JCL_DD, SQL_STMT,
SQL_TABLE_USE, SQL_COLUMN_USE and CALL_EDGE.access; edge attributes (plan,
launcher, bind, sqlProcedure); utilities read from utilities.txt; member ->
job INCLUDE edges drive incremental re-analysis; the SOURCE.id ceiling is
checked before writing.

Rules: R050 undefined JCL reference, R051 duplicate DD name, R052 DD missing
for a program's file, R053 RESTART/TYPRUN on the JOB card, R054 UPDATE/DELETE
without WHERE, R055 cursor lifecycle on the CFG, R056 SELECT INTO not
narrowed, R057 co